Added destroy and removed a deprecated function