@@ -3,20 +3,22 @@ package ninja.cooperstuff.engine.components;
 import ninja.cooperstuff.engine.Game;
 
 import java.awt.*;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 public abstract class GameObject {
 	public Game game = null;
 	public Transform transform = new Transform(this);
 	public HashMap<Class, Component> components = new HashMap<>();
+	public int frame = 0;
 
 	public <T extends Component> T addComponent(Class<T> componentType) {
 		Component component = null;
 		try {
-			component = (Component) componentType.newInstance();
+			component = (Component) componentType.getDeclaredConstructor().newInstance();
 			component.gameObject = this;
 			this.components.put(componentType, component);
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			e.printStackTrace();
 		}
 		return (T) component;
@@ -28,6 +30,10 @@ public abstract class GameObject {
 
 	public <T extends Component> boolean hasComponent(Class<T> componentType) {
 		return this.components.containsKey(componentType);
+	}
+
+	public void destroy() {
+		this.game.destroy(this);
 	}
 
 	@SuppressWarnings("unused")
